--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   php:
     # image: php:7.4-apache can't be used
     build:
-      context: .
+      context: ./web
       dockerfile: Dockerfile
     depends_on:
       - db
@@ -14,7 +14,9 @@ services:
       - ./src:/var/www/html
   db:
     container_name: db
-    image: mysql
+    build:
+      context: ./db
+      dockerfile: Dockerfile
     # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
     # (this is just an example, not intended to be a production configuration)
     command: --default-authentication-plugin=mysql_native_password
@@ -27,7 +29,9 @@ services:
     ports:
       - "3306:3306"
   adminer:
-    image: adminer
+    build:
+      context: ./adminer
+      dockerfile: Dockerfile
     restart: always
     ports:
       - 8080:8080
